styles/main.css
/* ... */
body {
  font-family: "Playfair Display", sans-serif;
  font-weight: 500;
  color: #010444;
}

p {
  font-size: 19px;
  line-height: 28px;
}

p > a {
  color: #7093e5;
  border-bottom: 2px solid #7093e5;
  text-decoration: none;
}

p > b {
  font-weight: 800;
}

.link {
  color: #4571da;
}
.link.active {
  color: #0f3aa0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 800;
}

h1 {
  font-size: 50px;
  color: #4571da;
}

h2,
h3,
h4,
h5,
h6 {
  color: #7093e5;
}

h2 {
  font-size: 42px;
}

h3 {
  font-size: 36px;
}

h4 {
  font-size: 30px;
}

h5 {
  font-size: 24px;
}

h6 {
  font-size: 22px;
}

.color-main {
  color: #010444;
}

.color-active {
  color: #0f3aa0;
}

.color-light {
  color: #4571da;
}

.color-lighter {
  color: #7093e5;
}

.bg-darker {
  background-color: #d8dafd;
}

.bg-dark {
  background-color: #dee0fb;
}

.bg-light {
  background-color: #eff0fd;
}

.text-overflow {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.content {
  width: 100%;
  max-width: 1400px;
}

.btn-main, .btn-icon {
  font-size: 18px;
  font-weight: 800;
  color: #fff;
  line-height: 1;
  background-color: #4571da;
  padding: 12px 18px;
}

.btn-icon {
  display: flex;
  align-items: center;
  gap: 10px;
  position: relative;
}
.btn-icon::after {
  position: relative;
  content: "";
  width: 18px;
  aspect-ratio: 1;
  background-image: url(../images/icons/pattern-sm.webp);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

img {
  aspect-ratio: auto;
}

.top-header {
  padding-top: 5.75px;
  padding-bottom: 5.75px;
  background-color: #fafafa;
}
.top-header *:not(.language) {
  font-size: 14px;
  color: #7093e5;
}
.top-header span {
  color: #010444 !important;
}
.top-header .content {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.top-header .training span {
  font-size: 15px;
}
.top-header .translate {
  display: flex;
  align-items: center;
}
.top-header .translate .language {
  font-size: 16px;
  font-weight: 600;
  padding: 0 25px;
}
.top-header .translate .language:last-child {
  padding-left: 25px;
  padding-right: 12px;
}
.top-header .translate .separator {
  width: 1px;
  height: 12px;
  background-color: #dee0fb;
}
@media (max-width: 1279px) {
  .top-header .content {
    flex-direction: column;
    gap: 12px;
    text-align: center;
  }
  .top-header .translate .language {
    padding: 0 15px;
  }
  .top-header .translate .language:last-child {
    padding: 0 15px;
  }
}
@media (min-width: 1280px) {
  .top-header .content {
    gap: 50px;
  }
  .top-header .training {
    margin-left: auto;
  }
}
@media (min-width: 1300px) {
  .top-header .content {
    gap: 100px;
  }
}

.nav-menu {
  position: relative;
  background-color: #fff;
}
.nav-menu .content {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.nav-menu .logo > img {
  max-width: 230px;
}
.nav-menu .links {
  display: none;
}
@media (min-width: 1280px) {
  .nav-menu .links {
    display: flex;
    align-items: center;
    gap: 12px;
  }
}
.nav-menu .links > li {
  padding: 8px 12px;
}
.nav-menu .links > li .placeholder {
  font-size: 16px;
}
.nav-menu .links > li > a, .nav-menu .links > li > .placeholder {
  color: #4571da;
}
.nav-menu .links > li.active > a, .nav-menu .links > li.active > .placeholder {
  color: #0f3aa0;
}
.nav-menu .links > .dropdown {
  display: flex;
  position: relative;
  align-items: center;
  gap: 5px;
  transition: all 0.2s ease-in-out;
}
.nav-menu .links > .dropdown::after {
  position: relative;
  top: 1px;
  content: "";
  width: 5px;
  height: 11px;
  background-image: url(../images/icons/three_dots.webp);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}
.nav-menu .links > .dropdown.active::after {
  content: "";
  background-image: url(../images/icons/three_dots_active.webp);
}
.nav-menu .links > .dropdown .sub-pages {
  position: absolute;
  top: 100%;
  left: 0;
  background-color: #dee0fb;
  border-bottom: 2px solid #7093e5;
  padding: 4px 12px 12px;
  transition: all 0.2s ease-in-out;
  opacity: 0;
  z-index: -1;
}
.nav-menu .links > .dropdown .sub-pages a {
  display: block;
  color: #4571da;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.nav-menu .links > .dropdown .link {
  opacity: 0;
  z-index: 0;
  transition: all 0.5s ease-in-out;
}
.nav-menu .links > .dropdown .placeholder {
  position: absolute;
  opacity: 1;
  z-index: 2;
  transition: all 0.5s ease-in-out;
}
.nav-menu .links > .dropdown:hover, .nav-menu .links > .dropdown:active {
  background-color: #dee0fb;
}
.nav-menu .links > .dropdown:hover .sub-pages, .nav-menu .links > .dropdown:active .sub-pages {
  opacity: 1;
  z-index: 1000;
}
@media (max-width: 1280px) {
  .nav-menu .links > .dropdown:hover .link, .nav-menu .links > .dropdown:active .link {
    opacity: 1;
    z-index: 2;
  }
  .nav-menu .links > .dropdown:hover .placeholder, .nav-menu .links > .dropdown:active .placeholder {
    opacity: 0;
    z-index: 0;
  }
}
@media (min-width: 1280px) {
  .nav-menu .links > .dropdown:hover {
    background-color: #dee0fb;
  }
  .nav-menu .links > .dropdown:hover .sub-pages {
    width: fit-content;
    max-width: 350px;
    opacity: 1;
    z-index: 1000;
  }
}
.nav-menu .links > .dropdown.selected {
  background-color: #dee0fb;
}
.nav-menu .links > .dropdown.selected .sub-pages {
  opacity: 1;
  z-index: 1000;
}
.nav-menu #toggleBtn {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 80px;
  height: 80px;
  transition: all 0.5s ease-in-out;
}
@media (min-width: 1280px) {
  .nav-menu #toggleBtn {
    display: none;
  }
}
.nav-menu #toggleBtn .icon,
.nav-menu #toggleBtn .icon::before,
.nav-menu #toggleBtn .icon::after {
  width: 35px;
  height: 3px;
  background-color: #7093e5;
  border-radius: 5px;
  transition: all 0.5s ease-in-out;
}
/* ... */

